--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,14 @@
-// Начните писать стили здесь
+@import "source/less/variable.less";
+@import "source/less/fonts.less";
+@import "source/less/global.less";
+@import "source/less/page.less";
+@import "source/less/main-nav.less";
+@import "source/less/site-list.less";
+@import "source/less/intro.less";
+@import "source/less/intro-descriprion.less";
+@import "source/less/resaon-wrapper.less";
+@import "source/less/reason-image.less";
+@import "source/less/search.less";
+@import "source/less/page-footer.less";
+@import "source/less/social.less";
+@import "source/less/copyright.less";
