--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,14 +1,14 @@
-@import "source/less/variable.less";
-@import "source/less/fonts.less";
-@import "source/less/global.less";
-@import "source/less/page.less";
-@import "source/less/main-nav.less";
-@import "source/less/site-list.less";
-@import "source/less/intro.less";
-@import "source/less/intro-descriprion.less";
-@import "source/less/resaon-wrapper.less";
-@import "source/less/reason-image.less";
-@import "source/less/search.less";
-@import "source/less/page-footer.less";
-@import "source/less/social.less";
-@import "source/less/copyright.less";
+@import "source/less/global/variable.less";
+@import "source/less/global/fonts.less";
+@import "source/less/global/global.less";
+@import "source/less/blocks/page.less";
+@import "source/less/blocks/main-nav.less";
+@import "source/less/blocks/site-list.less";
+@import "source/less/blocks/intro.less";
+@import "source/less/blocks/intro-descriprion.less";
+@import "source/less/blocks/reason-wrapper.less";
+@import "source/less/blocks/reason-image.less";
+@import "source/less/blocks/search.less";
+@import "source/less/blocks/page-footer.less";
+@import "source/less/blocks/social.less";
+@import "source/less/blocks/copyright.less";
