--- a/source/less/blocks/intro-descriprion.less
+++ b/source/less/blocks/intro-descriprion.less
@@ -9,3 +9,9 @@
   line-height: 26px;
   color: @dark;
 }
+
+.intro-description__text {
+  font-size: 14px;
+  line-height: 24px;
+  color: @dark;
+}
