--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -1,18 +1,12 @@
-.search {
-  //margin-top: 33px;
-  //margin-bottom: 49px;
-}
-
-.search__title {
+.video__title {
   font-weight: bold;
-  font-size: 21px;
+  font-size: 18px;
   line-height: 26px;
   color: @black;
 }
 
-.search__description {
+.video__description {
   font-size: 14px;
   line-height: 24px;
   color: @dark;
 }
-
