--- a/source/less/style.less
+++ b/source/less/style.less
@@ -9,6 +9,15 @@
 @import "source/less/blocks/reason-wrapper.less";
 @import "source/less/blocks/reason-image.less";
 @import "source/less/blocks/search.less";
+@import "source/less/blocks/map.less";
 @import "source/less/blocks/page-footer.less";
 @import "source/less/blocks/social.less";
 @import "source/less/blocks/copyright.less";
+@import "source/less/blocks/photos.less";
+@import "source/less/blocks/video.less";
+@import "source/less/blocks/person-form.less";
+@import "source/less/blocks/contact-form.less";
+@import "source/less/blocks/opinion-form.less";
+@import "source/less/blocks/attractions-form.less";
+@import "source/less/blocks/emotions-form.less";
+@import "source/less/blocks/button.less";
