--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -2,9 +2,9 @@
   margin: 0;
   padding: 0;
   list-style: none;
-}
 
-.main-nav__list a {
-  color: @black;
-  text-decoration: none;
+  a {
+    color: @black;
+    text-decoration: none;
+  }
 }
