--- a/source/less/blocks/person-form.less
+++ b/source/less/blocks/person-form.less
@@ -5,7 +5,7 @@
   color: @black;
 }
 
-.name-form {
+.person-form__name {
   width: 230px;
   min-height: 58px;
   background-color: @lightgray;
@@ -16,7 +16,7 @@
   color: @black;
 }
 
-.surname-form {
+.person-form__surname {
   width: 192px;
   min-height: 58px;
   background-color: @lightgray;
@@ -27,7 +27,7 @@
   color: @black;
 }
 
-.middlename-form {
+.person-form__middlename {
   width: 194px;
   min-height: 58px;
   background-color: @lightgray;
