--- a/source/less/blocks/attractions-form.less
+++ b/source/less/blocks/attractions-form.less
@@ -5,10 +5,12 @@
   color: @black;
 }
 
-.attractions-form label {
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 26px;
-  color: @black;
-  text-transform: none;
+.attractions-form {
+  label {
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 26px;
+    color: @black;
+    text-transform: none;
+  }
 }
