--- a/source/less/blocks/contact-form.less
+++ b/source/less/blocks/contact-form.less
@@ -5,7 +5,7 @@
   color: @black;
 }
 
-.tel-form {
+.contact-form__tel {
   width: 280px;
   min-height: 58px;
   background-color: @lightgray;
@@ -16,7 +16,7 @@
   color: @black;
 }
 
-.email-form {
+.contact-form__email {
   width: 280px;
   min-height: 58px;
   background-color: @lightgray;
