--- a/source/less/blocks/emotions-form.less
+++ b/source/less/blocks/emotions-form.less
@@ -5,7 +5,7 @@
   color: @black;
 }
 
-.txt-form {
+.emotions-form__txt {
   width: 279px;
   min-height: 160px;
   font-family: @basic-font;
@@ -17,7 +17,7 @@
   border: none;
 }
 
-.forms__text {
+.emotions-form__subitem {
   font-size: 14px;
   line-height: 26px;
   color: @dark;
