--- a/source/less/blocks/contact-form.less
+++ b/source/less/blocks/contact-form.less
@@ -5,18 +5,7 @@
   color: @black;
 }
 
-.contact-form__tel {
-  width: 280px;
-  min-height: 58px;
-  background-color: @lightgray;
-  border: none;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 26px;
-  color: @black;
-}
-
-.contact-form__email {
+.contact-form__field {
   width: 280px;
   min-height: 58px;
   background-color: @lightgray;
