--- a/source/less/blocks/person-form.less
+++ b/source/less/blocks/person-form.less
@@ -1,3 +1,9 @@
+.person-form {
+  label {
+    padding-right: 5px;
+  }
+}
+
 .person-form__title {
   font-weight: bold;
   font-size: 18px;
@@ -5,30 +11,9 @@
   color: @black;
 }
 
-.person-form__name {
-  width: 230px;
-  min-height: 58px;
-  background-color: @lightgray;
-  border: none;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 26px;
-  color: @black;
-}
-
-.person-form__surname {
-  width: 192px;
-  min-height: 58px;
-  background-color: @lightgray;
-  border: none;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 26px;
-  color: @black;
-}
-
-.person-form__middlename {
-  width: 194px;
+.person-form__field {
+  display: flex;
+  width: 100%;
   min-height: 58px;
   background-color: @lightgray;
   border: none;
