--- a/source/less/blocks/reason.less
+++ b/source/less/blocks/reason.less
@@ -48,15 +48,6 @@
   }
 }
 
-.reason-subitem__title {
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 26px;
-  color: @black;
-}
-
-.reason-subitem__description {
-  font-size: 14px;
-  line-height: 21px;
-  color: @dark;
+.reason__image {
+  margin-bottom: 26px;
 }
