--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,6 +2,7 @@
 @import "source/less/global/fonts.less";
 @import "source/less/global/global.less";
 @import "source/less/blocks/page.less";
+@import "source/less/blocks/page-header.less";
 @import "source/less/blocks/main-nav.less";
 @import "source/less/blocks/site-list.less";
 @import "source/less/blocks/intro.less";
