--- a/source/less/blocks/intro-descriprion.less
+++ b/source/less/blocks/intro-descriprion.less
@@ -1,17 +1,43 @@
 .intro-description__title {
+  width: 300px;
   font-weight: bold;
   font-size: 18px;
   line-height: 26px;
+  margin: 0;
+
+  @media (min-width: @tablet-width) {
+    width: 542px;
+  }
 }
 
 .intro-description__reasons {
+  width: 285px;
   font-size: 14px;
   line-height: 26px;
   color: @dark;
+  margin: 0;
+
+  @media (min-width: @tablet-width) {
+    width: 542px;
+  }
 }
 
 .intro-description__text {
   font-size: 14px;
   line-height: 24px;
   color: @dark;
+  margin: 0;
+}
+
+.intro-description {
+  text-align: center;
+
+  @media (min-width: @tablet-width) {
+    padding: 0 124px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin: 0 auto;
+    width: 484px;
+  }
 }
