--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,7 +1,22 @@
+.page-footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  @media (min-width: @tablet-width) {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
 .page-footer__hashtag {
   font-weight: bold;
   font-size: 21px;
   line-height: 26px;
   color: @black;
   text-decoration: none;
+}
+
+.page-footer__copyright {
+  display: flex;
 }
