--- a/source/less/blocks/reason-wrapper.less
+++ b/source/less/blocks/reason-wrapper.less
@@ -1,1 +1,15 @@
-// тут будут стили
+.reason-wrapper__inner {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+
+  @media (min-width: @tablet-width) {
+    flex-direction: row;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .reason__content--gray {
+    height: 256px;
+  }
+}
