--- a/source/less/blocks/search.less
+++ b/source/less/blocks/search.less
@@ -1,9 +1,10 @@
 .search {
-  //margin-top: 33px;
-  //margin-bottom: 49px;
+  min-height: 120px;
+  text-align: center;
 }
 
 .search__title {
+  margin: 0;
   font-weight: bold;
   font-size: 21px;
   line-height: 26px;
@@ -14,4 +15,5 @@
   font-size: 14px;
   line-height: 24px;
   color: @dark;
+  margin: 0;
 }
