--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,6 +1,7 @@
 .main-nav__list {
   display: flex;
   flex-direction: column;
+  width: 100%;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -9,9 +10,17 @@
     color: @black;
     text-decoration: none;
   }
+}
 
-  @media (min-width: @tablet-width) {
+@media (min-width: @tablet-width) {
+  .main-nav__list {
+    display: flex;
     flex-direction: row;
     justify-content: space-around;
   }
+
+  .main-nav__toggle {
+    display: none;
+  }
 }
+
