--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -1,5 +1,12 @@
 .intro {
+  position: relative;
   min-height: 389px;
   background-image: url("../img/back-mobile.jpg.jpg");
   background-repeat: no-repeat;
+
+  svg {
+    position: absolute;
+    top: 90px;
+    left: 19px;
+  }
 }
