--- a/source/less/blocks/emotions-form.less
+++ b/source/less/blocks/emotions-form.less
@@ -1,4 +1,5 @@
 .emotions-form__title {
+  margin: 0;
   font-weight: bold;
   font-size: 18px;
   line-height: 26px;
@@ -6,6 +7,7 @@
 }
 
 .emotions-form__txt {
+  margin: 0;
   width: 279px;
   min-height: 160px;
   font-family: @basic-font;
@@ -18,6 +20,7 @@
 }
 
 .emotions-form__subitem {
+  margin: 0;
   display: none;
   font-size: 14px;
   line-height: 26px;
