--- a/source/less/blocks/contact-form.less
+++ b/source/less/blocks/contact-form.less
@@ -1,4 +1,5 @@
 .contact-form__title {
+  margin: 0;
   font-weight: bold;
   font-size: 18px;
   line-height: 26px;
@@ -6,6 +7,7 @@
 }
 
 .contact-form__field {
+  margin: 0;
   width: 280px;
   min-height: 58px;
   background-color: @lightgray;
@@ -17,6 +19,7 @@
 }
 
 .contact-form__subitem {
+  margin: 0;
   font-size: 14px;
   line-height: 26px;
   color: @dark;
