--- a/source/less/blocks/opinion-form.less
+++ b/source/less/blocks/opinion-form.less
@@ -1,4 +1,5 @@
 .opinion-form__title {
+  margin: 0;
   font-weight: bold;
   font-size: 18px;
   line-height: 26px;
@@ -6,6 +7,7 @@
 }
 
 .opinion-form__text {
+  margin: 0;
   font-weight: bold;
   font-size: 18px;
   line-height: 26px;
