--- a/source/less/blocks/reason.less
+++ b/source/less/blocks/reason.less
@@ -7,15 +7,20 @@
   }
 
   &--gray {
+    min-height: 167px;
     background-color: @gray;
   }
+}
 
-  @media (min-width: @tablet-width) {
+@media (min-width: @tablet-width) {
+  .reason__content {
     width: 256px;
     min-height: 256px;
   }
+}
 
-  @media (min-width: @desktop-width) {
+@media (min-width: @desktop-width) {
+  .reason__content {
     width: 400px;
     min-height: 256px;
   }
@@ -71,5 +76,17 @@
 }
 
 .reason__image {
-  margin-bottom: 26px;
+  font-size: 0;
+}
+
+.reason {
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: @tablet-width) {
+  .reason {
+    display: flex;
+    flex-direction: row;
+  }
 }
