--- a/source/less/global/variable.less
+++ b/source/less/global/variable.less
@@ -1,9 +1,9 @@
-@white: #FFFFFF;
+@white: #ffffff;
 @black: #000000;
 @dark: #333333;
-@blue: #81B3D2;
-@gray: #EEEEEE;
-@lightgray: #F2F2F2;
+@blue: #81b3d2;
+@gray: #eeeeee;
+@lightgray: #f2f2f2;
 
 @tablet-width: 768px;
 @desktop-width: 1200px;
