--- a/source/less/blocks/intro-descriprion.less
+++ b/source/less/blocks/intro-descriprion.less
@@ -3,8 +3,10 @@
   font-size: 18px;
   line-height: 26px;
   margin: 0;
+}
 
-  @media (min-width: @tablet-width) {
+@media (min-width: @tablet-width) {
+  .intro-description__title {
     width: 542px;
   }
 }
@@ -14,8 +16,10 @@
   line-height: 26px;
   color: @dark;
   margin: 0;
+}
 
-  @media (min-width: @tablet-width) {
+@media (min-width: @tablet-width) {
+  .intro-description__reasons {
     width: 542px;
   }
 }
@@ -25,20 +29,26 @@
   line-height: 26px;
   color: @dark;
   margin: 0;
+}
 
-  @media (min-width: @tablet-width) {
+@media (min-width: @tablet-width) {
+  .intro-description__text {
     width: 542px;
   }
 }
 
 .intro-description {
   text-align: center;
+}
 
-  @media (min-width: @tablet-width) {
+@media (min-width: @tablet-width) {
+  .intro-description {
     padding: 0 124px;
   }
+}
 
-  @media (min-width: @desktop-width) {
+@media (min-width: @desktop-width) {
+  .intro-description {
     margin: 0 auto;
     width: 484px;
   }
