--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -9,12 +9,16 @@
   margin: 0 auto;
   background-color: @white;
   text-transform: uppercase;
+}
 
-  @media (min-width: @tablet-width) {
+@media (min-width: @tablet-width) {
+  .page__body {
     width: 768px;
   }
+}
 
-  @media (min-width: @desktop-width) {
+@media (min-width: @desktop-width) {
+  .page__body {
     width: 1200px;
   }
 }
