--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -1,11 +1,15 @@
 .video {
   text-align: center;
+}
 
-  @media (min-width: @tablet-width) {
+@media (min-width: @tablet-width) {
+  .video {
     padding: 0 124px;
   }
+}
 
-  @media (min-width: @desktop-width) {
+@media (min-width: @desktop-width) {
+  .video {
     margin: 0 auto;
     width: 500px;
   }
