--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -2,8 +2,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
 
-  @media (min-width: @tablet-width) {
+@media (min-width: @tablet-width) {
+  .page-footer {
     flex-direction: row;
     justify-content: space-between;
   }
