--- a/source/less/blocks/photo.less
+++ b/source/less/blocks/photo.less
@@ -4,12 +4,16 @@
   flex-wrap: wrap;
   flex-direction: column;
   margin-bottom: 15px;
+}
 
-  @media (min-width: @tablet-width) {
+@media (min-width: @tablet-width) {
+  .photo {
     background-color: @lightgray;
   }
+}
 
-  @media (min-width: @desktop-width) {
+@media (min-width: @desktop-width) {
+  .photo {
     background-color: @black;
   }
 }
