--- a/source/less/blocks/photo.less
+++ b/source/less/blocks/photo.less
@@ -4,17 +4,20 @@
   flex-wrap: wrap;
   flex-direction: column;
   margin-bottom: 15px;
-}
+  width: 100%;
 
-@media (min-width: @tablet-width) {
-  .photo {
-    background-color: @lightgray;
+  @media (min-width: @tablet-width) {
+    width: 50%;
   }
-}
 
-@media (min-width: @desktop-width) {
-  .photo {
-    background-color: @black;
+  @media (min-width: @desktop-width) {
+    width: 33%;
+  }
+
+  &--full-width {
+    @media (min-width: @tablet-width) {
+      width: 100%;
+    }
   }
 }
 
@@ -24,6 +27,11 @@
   font-size: 14px;
   line-height: 24px;
   color: @black;
+
+  @media (min-width: @desktop-width) {
+    font-weight: 400;
+    color: @white;
+  }
 }
 
 .photo__author {
@@ -32,6 +40,10 @@
   line-height: 24px;
   color: @dark;
   text-transform: none;
+
+  @media (min-width: @desktop-width) {
+    color: @white;
+  }
 }
 
 .photo__number {
@@ -43,4 +55,21 @@
   font-size: 14px;
   line-height: 24px;
   color: @black;
+
+  @media (min-width: @desktop-width) {
+    color: @white;
+  }
+}
+
+.photo__text-wrapper {
+  background-color: @white;
+
+  @media (min-width: @tablet-width) {
+    background-color: @lightgray;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: -72px;
+    background-color: rgba(0, 0, 0, 0.4);
+  }
 }
