--- a/source/less/style.less
+++ b/source/less/style.less
@@ -15,7 +15,9 @@
 @import "source/less/blocks/social.less";
 @import "source/less/blocks/copyright.less";
 @import "source/less/blocks/photo.less";
+@import "source/less/blocks/photos.less";
 @import "source/less/blocks/video.less";
+@import "source/less/blocks/forms.less";
 @import "source/less/blocks/person-form.less";
 @import "source/less/blocks/contact-form.less";
 @import "source/less/blocks/opinion-form.less";
