--- a/source/less/blocks/person-form.less
+++ b/source/less/blocks/person-form.less
@@ -1,10 +1,22 @@
 .person-form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+
   label {
+    display: flex;
+    flex-direction: row;
     padding-right: 5px;
+    margin-top: 10px;
+  }
+
+  @media (min-width: @tablet-width) {
+    width: 50%;
   }
 }
 
 .person-form__title {
+  text-align: center;
   margin: 0;
   font-weight: bold;
   font-size: 18px;
@@ -22,4 +34,14 @@
   font-size: 18px;
   line-height: 26px;
   color: @black;
+}
+
+.person-form__subitem {
+  display: flex;
+  align-items: center;
+  padding-right: 20px;
+  margin: 0;
+  font-size: 14px;
+  line-height: 26px;
+  color: #333333;
 }
