--- a/source/less/blocks/contact-form.less
+++ b/source/less/blocks/contact-form.less
@@ -42,3 +42,12 @@
   line-height: 26px;
   color: @dark;
 }
+
+.contact-form__wrapper {
+  @media (min-width: @desktop-width) {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-around;
+  }
+}
