--- a/source/less/blocks/attractions-form.less
+++ b/source/less/blocks/attractions-form.less
@@ -22,7 +22,8 @@
 
 .attractions-form__title {
   text-align: center;
-  margin: 0;
+  width: 268px;
+  margin: 0 auto;
   font-weight: bold;
   font-size: 18px;
   line-height: 26px;
