--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -12,4 +12,8 @@
   background-color: @blue;
   box-sizing: border-box;
   border: none;
+
+  @media (min-width: @tablet-width) {
+    width: 458px;
+  }
 }
