--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,3 +1,12 @@
 .map {
   width: 100%;
+  margin-top: 49px;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 58px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 66px;
+  }
 }
