--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -2,19 +2,26 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 10px;
 
   @media (min-width: @tablet-width) {
+    margin: 0;
     flex-direction: row;
     justify-content: space-between;
   }
 }
 
 .page-footer__hashtag {
+  margin-top: 28px;
   font-weight: bold;
   font-size: 21px;
   line-height: 26px;
   color: @black;
   text-decoration: none;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 0;
+  }
 }
 
 .page-footer__copyright {
