--- a/source/less/blocks/reason.less
+++ b/source/less/blocks/reason.less
@@ -1,30 +1,102 @@
+.reason {
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-direction: row;
+  }
+}
+
 .reason__content {
+  position: relative;
   min-height: 191px;
   text-align: center;
 
   &--blue {
     background-color: @blue;
+
+    @media (min-width: @tablet-width) {
+      padding: 0 29px;
+      box-sizing: border-box;
+    }
   }
 
   &--gray {
+    padding: 0 27px;
     min-height: 167px;
     background-color: @gray;
+
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 280px;
+      height: 1px;
+      background-color: @light;
+
+      @media (min-width: @tablet-width) {
+        display: none;
+      }
+    }
+
+    &:last-child {
+      &::after {
+        display: none;
+      }
+    }
+
+    @media (min-width: @tablet-width) {
+      padding: 0 34px;
+    }
+  }
+
+  &--first {
+    position: relative;
+
+    @media (max-width: @mobile-width-only) {
+      min-height: 211px;
+    }
+
+    h3 {
+      @media (max-width: @mobile-width-only) {
+        padding-top: 55px;
+      }
+    }
+
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      top: -1px;
+      left: 0;
+      width: 0;
+      height: 0;
+      border-style: solid;
+      border-width: 21px 160px 0 160px;
+      border-color: #ffffff transparent transparent transparent;
+
+      @media (min-width: @tablet-width) {
+        display: none;
+      }
+    }
+  }
+
+  &--second {
+    order: 2;
   }
 
   @media (min-width: @tablet-width) {
-    width: 256px;
+    width: 33.3%;
     min-height: 256px;
   }
 
   @media (min-width: @desktop-width) {
     width: 400px;
     min-height: 256px;
-  }
-}
-
-.reason__content--first {
-  @media (max-width: @mobile-width-only) {
-    min-height: 211px;
   }
 }
 
@@ -35,11 +107,18 @@
   margin: 0;
 
   &--white {
+    padding-top: 39px;
     color: @white;
   }
 
   &--black {
+    padding-top: 40px;
     color: @black;
+
+    @media (min-width: @tablet-width) {
+      width: 157px;
+      margin: 0 auto;
+    }
   }
 }
 
@@ -49,38 +128,32 @@
   margin: 0;
 
   &--white {
+    padding-top: 10px;
     color: @white;
   }
 
   &--black {
+    padding-top: 10px;
     color: @black;
   }
 }
 
 .reason__description {
-  font-size: 14px;
+  font-size: 13px;
   line-height: 21px;
   margin: 0;
 
   &--white {
+    padding-top: 10px;
     color: @white;
   }
 
   &--dark {
+    padding-top: 10px;
     color: @dark;
   }
 }
 
 .reason__image {
   font-size: 0;
-}
-
-.reason {
-  display: flex;
-  flex-direction: column;
-
-  @media (min-width: @tablet-width) {
-    display: flex;
-    flex-direction: row;
-  }
 }
