--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,6 +1,14 @@
 .social {
   display: flex;
   padding: 0;
+  margin: 0;
+  margin-top: 33px;
+  margin-bottom: 45px;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 36px;
+    margin-bottom: 36px;
+  }
 }
 
 .social__item {
