--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -1,4 +1,6 @@
 .video {
+  position: relative;
+  margin-top: 47px;
   text-align: center;
 
   @media (min-width: @tablet-width) {
@@ -6,7 +8,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin: 0 auto;
+    margin: 62px auto;
     width: 500px;
   }
 }
@@ -17,11 +19,107 @@
   font-size: 18px;
   line-height: 26px;
   color: @black;
+
+  @media (min-width: @tablet-width) {
+    font-size: 21px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 30px;
+    line-height: 26px;
+  }
 }
 
 .video__description {
   margin: 0;
+  padding-top: 15px;
   font-size: 14px;
   line-height: 24px;
   color: @dark;
+}
+
+.video__controls {
+  position: absolute;
+  bottom: -62px;
+  left: 20px;
+  width: 280px;
+  height: 66px;
+  margin: 0 auto;
+  background-color: @lightgray;
+}
+
+.video__time {
+  position: absolute;
+  bottom: 66px;
+  left: 0;
+  width: 280px;
+  height: 45px;
+  background-color: rgba(0, 0, 0, 0.6);
+
+  @media (min-width: @tablet-width) {
+    left: 60px;
+    width: 648px;
+    min-height: 93px;
+  }
+}
+
+.time-line {
+  position: absolute;
+  top: 22px;
+  left: 22px;
+  width: 235px;
+  height: 3px;
+  background-color: rgba(255, 255, 255, 0.2);
+
+  @media (min-width: @tablet-width) {
+    width: 389px;
+    top: 45px;
+    left: 93px;
+  }
+}
+
+.time-cirle {
+  position: absolute;
+  top: 17px;
+  left: 56px;
+  width: 13px;
+  height: 13px;
+  background-color: @white;
+  border-radius: 50%;
+  cursor: pointer;
+
+  @media (min-width: @tablet-width) {
+    top: 40px;
+    left: 204px;
+  }
+}
+
+.repeat__btn {
+  position: absolute;
+  top: 22px;
+  left: 25px;
+  width: 16px;
+  height: 20px;
+  background-color: @dark;
+  border: none;
+}
+
+.subtitiles__btn {
+  position: absolute;
+  top: 23px;
+  right: 74px;
+  width: 32px;
+  height: 20px;
+  background-color: @dark;
+  border: none;
+}
+
+.fullscreen__btn {
+  position: absolute;
+  top: 23px;
+  right: 23px;
+  width: 20px;
+  height: 20px;
+  background-color: @dark;
+  border: none;
 }
