--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,6 +1,7 @@
 .page-header {
   display: flex;
   flex-direction: column-reverse;
+  padding: 15px 0;
 }
 
 .page-header__logo {
@@ -9,4 +10,5 @@
   top: 0;
   left: 50%;
   transform: translateX(-50%);
+  z-index: 1;
 }
