--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -1,6 +1,6 @@
 .page {
   height: 100%;
-  font-family: "PT Sans Narrow", "Arial", sans-serif;
+  font-family: @basic-font;
 }
 
 .page__body {
@@ -16,5 +16,6 @@
 
   @media (min-width: @desktop-width) {
     width: 1200px;
+    box-shadow: 0 0 30px -4px rgba(0, 0, 0, 0.6);
   }
 }
