--- a/source/less/blocks/person-form.less
+++ b/source/less/blocks/person-form.less
@@ -2,11 +2,11 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  padding: 0 20px;
 
   label {
     display: flex;
     flex-direction: row;
-    padding-right: 5px;
     margin-top: 10px;
   }
 
@@ -28,12 +28,15 @@
   display: flex;
   width: 100%;
   min-height: 58px;
-  background-color: @lightgray;
+  padding-left: 22px;
+  padding-right: 22px;
+  background-color: #f2f2f2;
   border: none;
   font-weight: bold;
   font-size: 18px;
   line-height: 26px;
-  color: @black;
+  color: #000000;
+  box-sizing: border-box;
 }
 
 .person-form__subitem {
