--- a/source/less/blocks/photos.less
+++ b/source/less/blocks/photos.less
@@ -1,3 +1,12 @@
+.photos {
+  margin-top: 76px;
+
+  @media (min-width: @desktop-width) {
+    margin-top: 78px;
+    margin-bottom: 4px;
+  }
+}
+
 .photos__wrapper {
   display: flex;
   flex-direction: column;
@@ -7,5 +16,9 @@
     display: flex;
     flex-direction: row;
     padding: 0 60px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 0;
   }
 }
