--- a/source/less/blocks/search.less
+++ b/source/less/blocks/search.less
@@ -9,11 +9,18 @@
 }
 
 .search__title {
+  display: block;
   margin: 0;
+  padding-top: 2px;
   font-weight: bold;
   font-size: 21px;
   line-height: 26px;
   color: @black;
+
+  @media (min-width: @tablet-width) {
+    font-size: 30px;
+    margin-top: -4px;
+  }
 }
 
 .search__description {
@@ -21,16 +28,15 @@
   line-height: 24px;
   color: #333333;
   margin: 0;
-  margin-top: 10px;
-  margin-bottom: 27px;
+  padding: 21px 22px 28px 23px;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 37px;
-    padding: 0 167px;
+    padding: 35px 167px 0 167px;
   }
 
   @media (min-width: @desktop-width) {
     margin-bottom: 42px;
-    padding: 0 382px;
+    padding: 35px 382px 0 382px;
   }
 }
