--- a/source/less/global/variable.less
+++ b/source/less/global/variable.less
@@ -10,5 +10,5 @@
 @desktop-width: 1200px;
 @mobile-width-only: 767px;
 
-@basic-font: "PT Sans Narrow", "Arial", sans-serif;
+@basic-font: "PT Sans", Arial, sans-serif;
 //@basic-font-bold: "PT Sans Narrow Bold", "Arial", sans-serif;
