--- a/source/less/blocks/contact-form.less
+++ b/source/less/blocks/contact-form.less
@@ -26,6 +26,7 @@
 
 .contact-form__field {
   display: flex;
+  position: relative;
   width: 100%;
   min-height: 58px;
   background-color: @lightgray;
@@ -34,13 +35,36 @@
   font-size: 18px;
   line-height: 26px;
   color: @black;
+
+  &::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 58px;
+    height: 58px;
+    background-color: red;
+  }
 }
 
 .contact-form__subitem {
+  position: relative;
   margin: 0;
   font-size: 14px;
   line-height: 26px;
   color: @dark;
+
+  &::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 58px;
+    height: 58px;
+    background-color: red;
+  }
 }
 
 .contact-form__wrapper {
