--- a/source/less/blocks/intro-descriprion.less
+++ b/source/less/blocks/intro-descriprion.less
@@ -1,17 +1,50 @@
+.intro-description {
+  text-align: center;
+
+  @media (min-width: @tablet-width) {
+    padding: 0 124px;
+    margin-bottom: 54px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin: 0 auto;
+    width: 484px;
+    margin-bottom: 43px;
+  }
+}
+
 .intro-description__title {
-  padding-top: 32px;
+  padding: 32px 28px 0 31px;
   font-weight: bold;
   font-size: 18px;
   line-height: 26px;
   margin: 0;
+  box-sizing: border-box;
 
   @media (min-width: @tablet-width) {
-    padding-top: 43px;
+    padding-top: 63px;
+    margin-left: -13px;
     width: 542px;
+    font-size: 30px;
   }
 
   @media (min-width: @desktop-width) {
-    padding-top: 55px;
+    padding-top: 100px;
+    margin-left: -31px;
+  }
+
+  &--main {
+    @media (min-width: @tablet-width) {
+      padding-top: 44px;
+      padding-left: 30px;
+      width: 542px;
+      font-size: 21px;
+    }
+
+    @media (min-width: @desktop-width) {
+      padding-top: 55px;
+      margin-left: -31px;
+    }
   }
 }
 
@@ -20,10 +53,17 @@
   line-height: 26px;
   color: @dark;
   margin: 0;
-  margin-top: 30px;
+  padding: 30px;
 
   @media (min-width: @tablet-width) {
     width: 542px;
+    padding: 0;
+    padding-top: 31px;
+    margin-left: -11px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-left: -30px;
   }
 }
 
@@ -32,25 +72,20 @@
   line-height: 26px;
   color: @dark;
   margin: 0;
+  padding: 25px 15px 0 19px;
 
   @media (min-width: @tablet-width) {
     width: 542px;
-  }
-}
-
-.intro-description {
-  text-align: center;
-
-  @media (min-width: @tablet-width) {
-    padding: 0 124px;
+    padding: 0;
+    padding-top: 32px;
+    margin-left: -11px;
   }
 
   @media (min-width: @desktop-width) {
-    margin: 0 auto;
-    width: 484px;
+    margin-left: -30px;
   }
 }
 
 .intro-description__wrapper {
-  margin-bottom: 11px;
+  margin-bottom: -1px;
 }
