--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -4,9 +4,30 @@
   background-image: url("../img/back-mobile.jpg.jpg");
   background-repeat: no-repeat;
 
+  @media (min-width: @tablet-width) {
+    background-image: url("../img/back-desktop.jpg.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    min-height: 518px;
+  }
+
   svg {
     position: absolute;
     top: 90px;
     left: 19px;
+  }
+
+  &::after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    min-height: 57px;
+    background-image: url("../img/intro-triangle.svg.svg");
+    background-repeat: no-repeat;
+    overflow: hidden;
+    background-position: center;
   }
 }
