--- a/source/less/blocks/photo.less
+++ b/source/less/blocks/photo.less
@@ -5,30 +5,78 @@
   flex-direction: column;
   width: 100%;
 
+  @media (max-width: @mobile-width-only) {
+    margin-bottom: 39px;
+  }
+
+  &::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: -23px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: #e5e5e5;
+
+    @media (min-width: @tablet-width) {
+      display: none;
+    }
+  }
+
+  &:last-child {
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      bottom: -17px;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      background-color: #e5e5e5;
+
+      @media (min-width: @tablet-width) {
+        display: none;
+      }
+    }
+  }
+
   @media (min-width: @tablet-width) {
     width: 50%;
   }
 
   @media (min-width: @desktop-width) {
-    width: 33%;
+    width: 33.3%;
+    margin-top: 0;
   }
 
   &--full-width {
+    @media (max-width: @mobile-width-only) {
+      margin-top: -24px;
+    }
+
     @media (min-width: @tablet-width) {
       width: 100%;
+      margin-top: 0;
     }
   }
 }
 
 .photo__title {
   margin: 0;
-  padding-top: 12px;
+  margin-top: -9px;
   font-weight: bold;
   font-size: 14px;
   line-height: 24px;
   color: @black;
 
+  @media (min-width: @tablet-width) {
+    padding: 0;
+    margin-top: 0;
+  }
+
   @media (min-width: @desktop-width) {
+    padding: 0;
     font-weight: 700;
     color: @white;
   }
@@ -48,16 +96,19 @@
 }
 
 .photo__number {
-  margin: 28px 20px 0 10px;
-  margin-top: 28px;
-  margin-right: 20px;
-  margin-left: 8px;
+  margin: 2px 20px 0 14px;
   font-weight: bold;
   font-size: 14px;
   line-height: 24px;
   color: @black;
 
+  @media (min-width: @tablet-width) {
+    margin: 0 29px 0 10px;
+  }
+
   @media (min-width: @desktop-width) {
+    margin-left: 8px;
+    margin-right: 35px;
     color: @white;
   }
 }
@@ -68,28 +119,38 @@
   @media (min-width: @tablet-width) {
     display: flex;
     flex-direction: row;
-
     justify-content: space-between;
+    height: 80px;
+    margin-top: -4px;
     background-color: @lightgray;
   }
 
   @media (min-width: @desktop-width) {
-    margin-top: -80px;
+    margin-top: -84px;
+    height: 80px;
     background-color: rgba(0, 0, 0, 0.4);
   }
 }
 
 .photo__first-block {
-  @media (min-width: @desktop-width) {
-    margin-left: 21px;
-  }
+  padding-top: 15px;
+  padding-left: 21px;
 }
 
 .photo__second-block {
   display: flex;
+  padding-left: 20px;
+  padding-top: 2px;
 
-  svg {
-    margin-top: 28px;
-    margin-bottom: 31px;
+  @media (min-width: @tablet-width) {
+    margin: auto 0;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-right: -13px;
+  }
+}
+
+.photo__picture {
+  margin: 0 auto;
 }
