--- a/source/less/blocks/reason.less
+++ b/source/less/blocks/reason.less
@@ -20,6 +20,11 @@
       padding: 0 29px;
       box-sizing: border-box;
     }
+
+    @media (min-width: @desktop-width) {
+      padding: 0 80px;
+      box-sizing: border-box;
+    }
   }
 
   &--gray {
@@ -61,9 +66,15 @@
       min-height: 211px;
     }
 
+    @media (min-width: @desktop-width) {
+      padding: 0 52px;
+      box-sizing: border-box;
+    }
+
     h3 {
       @media (max-width: @mobile-width-only) {
         padding-top: 55px;
+        padding-left: 2px;
       }
     }
 
@@ -71,13 +82,11 @@
       content: "";
       display: block;
       position: absolute;
-      top: -1px;
-      left: 0;
-      width: 0;
-      height: 0;
-      border-style: solid;
-      border-width: 21px 160px 0 160px;
-      border-color: #ffffff transparent transparent transparent;
+      top: -16px;
+      width: 100%;
+      height: 37px;
+      background-image: url("../img/white-copy.svg");
+      background-repeat: no-repeat;
 
       @media (min-width: @tablet-width) {
         display: none;
@@ -86,7 +95,9 @@
   }
 
   &--second {
-    order: 2;
+    @media (min-width: @tablet-width) {
+      order: 2;
+    }
   }
 
   @media (min-width: @tablet-width) {
@@ -106,18 +117,29 @@
   line-height: 26px;
   margin: 0;
 
+  @media (min-width: @tablet-width) {
+    font-size: 21px;
+  }
+
   &--white {
     padding-top: 39px;
     color: @white;
+
+    @media (min-width: @desktop-width) {
+      padding: 47px 44px 0 44px;
+    }
   }
 
   &--black {
-    padding-top: 40px;
+    padding-top: 26px;
+    padding-left: 1px;
     color: @black;
 
     @media (min-width: @tablet-width) {
       width: 157px;
       margin: 0 auto;
+      padding-top: 42px;
+      padding-left: 0;
     }
   }
 }
@@ -128,29 +150,42 @@
   margin: 0;
 
   &--white {
-    padding-top: 10px;
+    padding-top: 11px;
     color: @white;
+
+    @media (min-width: @tablet-width) {
+      padding-top: 14px;
+    }
   }
 
   &--black {
-    padding-top: 10px;
+    padding-top: 11px;
+    padding-left: 1px;
     color: @black;
   }
 }
 
 .reason__description {
-  font-size: 13px;
+  font-size: 14px;
   line-height: 21px;
   margin: 0;
 
   &--white {
-    padding-top: 10px;
+    padding-top: 17px;
     color: @white;
+
+    @media (min-width: @tablet-width) {
+      padding-top: 24px;
+    }
   }
 
   &--dark {
-    padding-top: 10px;
+    padding-top: 17px;
     color: @dark;
+
+    @media (min-width: @tablet-width) {
+      padding-top: 25px;
+    }
   }
 }
 
